<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context=".MapsActivity" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_decline"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/decline"
        android:textColor="@android:color/white"
        app:chipBackgroundColor="@color/colorAccent"
        app:chipIcon="@drawable/baseline_clear_24"
        app:chipIconTint="@android:color/white"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_accept"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_type_uber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/uber_move"
                    android:text="N-FURGON"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center">

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/circularProgressBar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cpb_background_progressbar_color="@android:color/white"
                        app:cpb_background_progressbar_width="3dp"
                        app:cpb_progress="0"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progress_max="100"
                        app:cpb_progressbar_color="@color/progress_bar_color"
                        app:cpb_progressbar_width="3dp"
                        app:cpb_round_border="false" />

                    <ImageView
                        android:id="@+id/img_round"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:clickable="false"
                        android:src="@drawable/baseline_emoji_people_24"
                        app:tint="@android:color/white" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:drawableRight="@drawable/sharp_award_star_24"
                    android:fontFamily="@font/uber_move"
                    android:text="4.25"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/txt_estimate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/uber_move_bold"
                android:text="2 min"
                android:textColor="@android:color/white"
                android:textSize="28sp" />
            <TextView
                android:id="@+id/txt_estimate_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/uber_move"
                android:text="0.4 km"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_start_uber"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_downward_24" />

                <ImageView
                    android:id="@+id/img_start_uber"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/baseline_account_circle_24" />
                <TextView
                    android:id="@+id/txt_start_uber_estimate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 min"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/img_start_uber"
                    android:fontFamily="@font/uber_move_bold" />

                <TextView
                    android:id="@+id/txt_start_uber_estimate_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.5 km"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/uber_move_bold"
                    android:layout_toRightOf="@+id/img_start_uber" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/baseline_account_circle_24"/>


            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/dark_gray"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_phone_call"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_add_call_24" />

                <TextView
                    android:id="@+id/txt_rider_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="John Pork"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/uber_move_bold" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_start_uber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/start_uber"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorStartUber" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_complete"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/complete_uber"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorStartUber" />
            </FrameLayout>
            



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>